screepsplus/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main
spec:
  rules:
  - 
    host: wg1.dev
    http:
      paths:
      - backend:
          serviceName: screepsplus
          servicePort: http
  - 
    host: stats.wg1.dev
    http:
      paths:
      - backend:
          serviceName: grafana-public
          servicePort: http
